--- a/blog/template/index.html
+++ b/blog/template/index.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <div class="header">
-      <h2>Tomi's Blog</h2>
+      <h2>Leuel's Blog</h2>
     </div>
 
     <div class="row">
