--- a/blog/template/posts.html
+++ b/blog/template/posts.html
@@ -53,7 +53,6 @@
 
     <div class="row">
       <div class="leftcolumn">
-        {% for post in posts reversed %}
         <div class="card">
           <a
             style="text-decoration: none; color: black"
@@ -61,10 +60,9 @@
           >
             <h2>{{post.title}}</h2>
             <h5>{{post.created_at}}</h5>
-            <p>{{post.body|truncatewords:20}}</p>
+            <p>{{post.body}}</p>
           </a>
         </div>
-        {% endfor %}
       </div>
     </div>
   </body>
